2008-05-02  Luca Bruno  <lethalman88@gmail.com>

	* doc/Makefile.am: added

	* configure.ac:
	
	* doc/manual/introsyx.texi: splitted from syx.texi

	* doc/manual/syx.texi (Introducing the Syx environment): basic Strings
	(What is Smalltalk): Image concept
	(Index): added Classes and Methods

2008-05-01  Luca Bruno  <lethalman88@gmail.com>
    
        Create reference to doc/reference.
        Add doc/manual.
    
        * doc/manual/syx.texinfo: added

	* doc/manual/syx.texi: added license informations and a brief introduction, renamed from .texinfo
	(Introducing the Syx environment): moved up
	(Index): add menu and Concepts section
	Added some concepts.

	* doc/manual/fdl-1.2.texi: added

	* doc/manual/syx.texi: added license informations and a brief introduction, renamed from .texinfo
	(Introducing the Syx environment): moved up
	(Index): add menu and Concepts section
	Added some concepts.
	(Programs): added
	(Introducing the Syx environment): started some docs

	* doc/manual/fdl-1.2.texi: added

	Create reference to doc/reference.
	Add doc/manual.

	* doc/manual/syx.texinfo: added
	
        * syx/syx-memory.c:
        (syx_memory_save_image): only store the stack of each process
        (_syx_memory_write_process_stack): fixed beginning and end of frames
        
        * syx/syx-memory.c:
        (_syx_memory_gc_mark): mark detached frames

        * syx/syx-memory.c:
        Fix lazy pointers.
        Fix BOS/EOS sequence for writing and reading.
        Store block closures that are not attached to any process.
        Save processes before any other object.

2008-04-27  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-memory.c (_syx_memory_write_frame): only write arguments and temporaries for detached frames
        (_syx_memory_write_process_stack): check for collected stacks, store the index of the frames
        (_syx_memory_read_process_stack): seek back by one
