@@ -116,7 +116,7 @@ GENERATE_HTML          = YES
 HTML_OUTPUT            = html/
 HTML_FILE_EXTENSION    = .html
 HTML_HEADER            = 
-HTML_FOOTER            = doc/html/extras/footer.html
+HTML_FOOTER            = doc/reference/html/extras/footer.html
 HTML_STYLESHEET        = 
 HTML_ALIGN_MEMBERS     = YES
 GENERATE_HTMLHELP      = YES
